		impact: dns_transmit_get() never times out;
		dns_resolve() busy-loops. fix: clear revents before
		poll().
20000315
	ui: axfr-get grabs zones when serials drop. tnx Frank Tegtmeyer.
	version: DNScache 0.93, gamma.
20000323
	ui: dns_rcip() accepts 0.0.0.0 in /etc/resolv.conf as 127.0.0.1.
		tnx Chris Saia.
20000325
	version: DNScache 1.00.
20000914
	ui: axfr-get decodes PTR. tnx to various people.
	ui: added dnsqr.
20000915
	portability problem: on some buggy kernels, accept() fails to
		copy O_NONBLOCK. tnx Pavel Kankovsky. impact: with these
		kernels, dnscache hangs if a TCP connection times out.
		fix: ndelay_on() after accept().
	ui: dnscache discards non-recursive queries.
	ui: *-conf use envdir in */run.
	internal: reorganized seed_addtime() calls in dnscache-conf.
	ui: tinydns-data prohibits PTR in generic records.
20000917
	ui: dns_transmit_get() does not pause after most recv() errors.
		still pauses after connection-refused when udploop is 2.
	version: djbdns 1.01.
20000922
	portability problem: Linux distributions use bash as /bin/sh;
		bash destroys $UID. dorks. impact: dnscache and axfrdns
		run as root. fix: envdir, then sh, then envuidgid. but
		/bin/sh really has to stop polluting the environment.
20000923
	ui: install /etc/dnsroots.global. dnscache-conf tries
		dnsroots.local, then dnsroots.global.
	ui: no longer install home/etc/dnscache.
	version: djbdns 1.02.
20001224
	ui: new dnstrace output format.
	ui: dnstrace shows all servers providing each ns/a line.
	ui: added dnstracesort.
20001225
	internal: response_rstart() and response_cname() use uint32 ttl.
	internal: added response_hidettl().
	internal: cache_get() returns ttl.
	internal: dnscache keeps track of ttls for aliases.
	ui: dnscache returns ttl unless $HIDETTL is set.
	ui: dnscache returns ttl 655360 for localhost et al.
20001226
	ui: dnscache supports $FORWARDONLY. tnx to several people for
		the suggestion. tnx Dan Peterson for sample code.